<resources>
    <string name="app_name">ChatiFy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ChatiFy</string>
    <string name="nav_header_subtitle">ChatiFy Dev Team</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="room_0">Song Chat</string>
    <string name="room_1">Album Chat</string>
    <string name="room2">Artist Chat</string>
    <string name="room3">Genre Chat</string>
    <string name="fav_artists">Define Your Favorite Artists</string>
    <string name="get_recomm">Get Recommendation</string>

    <string name="get_premium">Get Premium</string>
    <string name="premium_includes">Premium Subscription includes:</string>
    <string name="no_ads">-Ad-free ChatiFy experience</string>
    <string name="concerts">-Ability to search for nearby concerts</string>
    <string name="upcoming_releases">-Reminders about upcoming releases</string>
    <string name="supporting">-Supporting your favourite developers :)</string>
    <string name="onetime_package">One-time Subscription for 0.99$</string>
    <string name="buy_now">Buy now</string>

    <string name="card_number">Card Number</string>
    <string name="card_name">Name on Card</string>
    <string name="exp_date">Expiration Date</string>
    <string name="CVV">CVV</string>
    <string name="confirm_card">Confirm</string>

    <string name="spotify_email">Spotify e-mail</string>
    <string name="spotify_password">Spotify password</string>
    <string name="spotify_submit">Submit</string>

    <string name="verify_password">Verify your Password</string>

    <string name="app_set">App Settings</string>
    <string name="acc_set">Account Settings</string>
    <string name="title_activity_app_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_set_0">App Notifications</string>
    <string name="app_set_1">Send Anonymous User Data</string>
    <string name="app_set_2">Country-Based Chat</string>
    <string name="app_set_3">Language-Based Chat</string>
    <string name="app_set_4">Screen Rotation Lock</string>
    <string name="user_message_default">Write a message</string>
    <string name="in_placeholder">Write a message</string>
    <string name="artist_radio0">Meshuggah</string>
    <string name="artist_radio3">Pink Floyd</string>
    <string name="artist_radio2">Sabaton</string>
    <string name="artist_radio1">System Of A Down</string>
    <string name="artist_radio4">The Doors</string>
    <string name="artist_radio5">Trivium</string>
    <string name="new_releases">New Releases</string>

    <!--Acc settings-->
    <string name="app_not">Enable App Notification</string>
    <string name="CBC">Country Based Chat</string>
    <string name="LBC">Language Based Chat</string>
    <string name="SRL">Screen Rotation Lock</string>
</resources>
