<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/room_group"
        android:checkableBehavior="single"
        android:enabled="true">
        <item
            android:id="@+id/songChatFragment"
            android:title="@string/room_0" />
        <item
            android:id="@+id/albumChatFragment"
            android:title="@string/room_1" />
        <item
            android:id="@+id/artistChatFragment"
            android:title="@string/room2" />
        <item
            android:id="@+id/genreChatFragment"
            android:title="@string/room3" />
        <item
            android:id="@+id/myFavouriteArtists"
            android:title="@string/fav_artists" />
        <item android:title="@string/get_recomm" />
    </group>
    <group android:id="@+id/options_group" >
        <item
            android:id="@+id/GetPremium"
            android:actionLayout="@layout/get_premium"
            android:icon="@mipmap/premium_icon_foreground"
            android:onClick="getPremiumButton"
            android:title="@string/get_premium" />
        <item
            android:id="@+id/appSettingsActivity"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/app_set" />
        <item
            android:icon="@drawable/ic_menu_manage"
            android:onClick="accountSettings"
            android:title="@string/acc_set" />
    </group>
</menu>
