<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="General Settings">
        <SwitchPreferenceCompat
            android:id="@+id/switchEAN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="app_not"
            app:title="@string/app_not" />

        <SwitchPreferenceCompat
            android:id="@+id/switchCBC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="app_not"
            app:title="@string/CBC" />

        <SwitchPreferenceCompat
            android:id="@+id/switchLBC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="app_not"
            app:title="@string/LBC" />

        <SwitchPreferenceCompat
            android:id="@+id/switchSRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:key="app_not"
            app:title="@string/SRL" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Data">
        <Preference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:key="open_contents"
            app:summary="Manage your data"
            app:title="Personal Data Management">
            <intent
                android:targetPackage="com.example.chatify"
                android:targetClass="com.example.chatify.PersonalDataManagement"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>