<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.chatify.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.chatify.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.chatify.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.chatify.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/appSettingsActivity"
        android:name="com.example.chatify.AppSettingsActivity"
        android:label="AppSettingsActivity" />
    <fragment
        android:id="@+id/appSettings"
        android:name="com.example.chatify.ui.appsettings.AppSettings"
        android:label="app_settings_fragment"
        tools:layout="@layout/app_settings_fragment" />
    <fragment
        android:id="@+id/songChatFragment"
        android:name="com.example.chatify.ui.songChat.SongChatFragment"
        android:label="song_chat_fragment"
        tools:layout="@layout/song_chat_fragment" />
    <fragment
        android:id="@+id/albumChatFragment"
        android:name="com.example.chatify.ui.albumChat.AlbumChatFragment"
        android:label="AlbumChatFragment" />
    <fragment
        android:id="@+id/artistChatFragment"
        android:name="com.example.chatify.ui.artistChat.ArtistChatFragment"
        android:label="ArtistChatFragment" />
    <fragment
        android:id="@+id/genreChatFragment"
        android:name="com.example.chatify.ui.genreChat.GenreChatFragment"
        android:label="GenreChatFragment" />
</navigation>